Development: updates on application.properties